# flexdi

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/source/: alternatives.rst  api.rst  async_example.rst  conf.py  entrypoints.rst  fastapi.rst  goals.rst  header.rst  implicit_vs_explicit.rst  index.rst  overview.rst  resolution.rst  sync_example.rst  testing.rst  why_di.rst
docs/source/overview/: example.rst  goals.rst  index.rst  overview.rst
examples/: entrypoints.py  fastapi_graph.py  resolution.py  sqla_async.py  sqla_sync.py  test_sqla_sync.py  why_di.py
examples/implicit_vs_explicit/: database.py  main_explicit.py  main_failing.py  main_implicit.py  service.py  service_implicit.py
src/flexdi/: __init__.py  _bindable.py  _entrypoint.py  _graph.py  _implicit.py  _openable.py  _resolvable.py  _rules.py  _scope.py  _store.py  _types.py  _util.py  binding.py  dependant.py  errors.py  flexpack.py  graph.py  injector.py  instance.py  invoker.py  policy.py  rules.py  scope.py  state.py  store.py  types.py  util.py
src/flexdi/fastapi/: __init__.py
src/flexdi/flask/: __init__.py
src/flexdi/grpc/: __init__.py
tests/: test_app_fastapi.py  test_app_flask.py  test_app_grpc.py  test_app_override.py  test_fastapi.py  test_flexpack.py  test_graph.py  test_graph_advanced.py  test_injector.py  test_module.py  test_scope.py  test_util.py
tests/test_app/: app.py  app_fastapi.py  app_flask.py  app_grpc.py
tests/test_app/protos/: hello.proto  hello_pb2.py  hello_pb2.pyi  hello_pb2_grpc.py  hello_pb2_grpc.pyi
