[metadata]
name = flexdi
version = 0.0.1
description = A flexible dependency injection tool for typed Python projects.
long_description = A flexible dependency injection tool for typed Python projects.
license = MIT
license_files = LICENSE
author = Cal Pratt
author_email = ccpratt4@gmail.com
classifiers =
    Programming Language :: Python :: 3.11
url = https://github.com/cal-pratt/flexdi

[options]
package_dir =
    =src
packages = find:
install_requires =
python_requires = >=3.11

[options.packages.find]
where = src

[options.package_data]
flexdi = py.typed

[flake8]
max-line-length = 100
