[metadata]
name = flexdi
version = 0.2.3
description = A flexible dependency injection tool for typed Python projects.
long_description = file: README.rst
license = MIT
license_files = LICENSE
author = Cal Pratt
author_email = ccpratt4@gmail.com
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/cal-pratt/flexdi

[options]
package_dir =
    =src
packages = find:
install_requires =
    typing-extensions >= 4
python_requires = >=3.8

[options.extras_require]
grpc =
    grpc-interceptor >= 0.15
    grpcio >= 1.44

[options.packages.find]
where = src

[options.package_data]
flexdi = py.typed

[flake8]
max-line-length = 100
